tests/analyzer/errors/union_inline.rv
fn main() {
    var a: int|bool = "no"
}
